# zSpotifyOverlay

./: CMakeLists.txt  README.md  compile_commands.json
src/: main.cpp  mainWindow.cpp  mainWindow.hpp
